[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hedge" 
version = "0.1.0"
description = "A utility library for dataset generation and clustering"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sushant Gautam", email = "susant.gautam@gmail.com" }
]
requires-python = ">=3.8"

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/SushantGautam/HEDGE"
Issues = "https://github.com/SushantGautam/HEDGE/issues"
